--- a/burger-queen/src/App.css
+++ b/burger-queen/src/App.css
@@ -14,25 +14,12 @@
 }
 
 .App-header {
-  background-color: #ff2b2b;
+  background-color: #ee2424;
+  min-height: 7vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-  min-height: 7vh;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
